[css-flexbox] Indefinite flex-basis percentage should cause height to be ignored https://bugs.webkit.org/show_bug.cgi?id=210077

Reviewed by Darin Adler.

Source/WebCore:

If flex-basis is a percentage of an indefinite height we should ignore
what height specifies and treat it and as height:auto.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::cacheChildMainSize): Cache the intrinsic height of the child when
flex-basis is a percentage of an indefinite length.

LayoutTests:

* TestExpectations: Removed flex-basis-010.html which is passing now.

Canonical link: https://commits.webkit.org/229368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267086 268f45cc-cd09-0410-ab3c-d52691b4dbfc